--- a/oddfuture.html
+++ b/oddfuture.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
 
+<html>
+
+	<head>
+		<meta charset="UTF-8">
+		<link href="css/icons/donut.ico" rel="icon" type="image/x-icon" />
+		<title>Odd Future</title>
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+
+	<body>
+		<div class="container1">
+			<div class="container2"></div>
+			<div class="container3">
+				<div class="block1"></div>
+				<div class="block2"></div>
+				<div class="block3"></div>
+				<div class="block4"></div>
+			</div>
+		</div>
+		
+	</body>
+   
+</html>
