--- a/oddfuture.html
+++ b/oddfuture.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<link href="css/icons/donut.ico" rel="icon" type="image/x-icon" />
 		<title>Odd Future</title>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="oddfuture.css">
 	</head>
 
 	<body>
